# raygame

./: .gitmodules  CMakeLists.txt  README.md
lib/rayengine/: CMakeLists.txt
lib/rayengine/include/: app.h  resourceManager.h  stateAbstract.h
lib/rayengine/include/ecs/: entity.h
lib/rayengine/include/utils/: truncateUUID.h  uid.h
lib/rayengine/src/: app.c  resourceManager.c
lib/rayengine/src/app/: appAddState.c  appCreate.c  appExecute.c  appFree.c  appGetCurrentState.c  appGetCurrentStateRawPointer.c  appResources.c  appSetState.c
lib/rayengine/src/ecs/: entity.c
lib/rayengine/src/utils/: truncateUUID.c  uid.c  uuid4.c
src/: main.c
src/states/menuState/: menuState.c  menuState.h
src/states/playState/: playState.c  playState.h  playStateOnEnter.c  playStateOnExit.c  playStateRender.c  playStateUpdate.c
